--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,54 +3,27 @@
     <h2 class="section-title">{{ 'organizedBy' | translate }}</h2>
   </ion-col>
   <ion-row justify-content-around>
-    <img
-      class="footer-img"
-      src="../../assets/images/Sponsors/logo-csc.png"
-      alt="Centrul pentru Studii Complexe"
-    />
-    <img
-      class="footer-img"
-      src="../../assets/images/Sponsors/Sigla-INCS.gif"
-      alt="Institutul Național de Cercetare Pentru Sport - România"
-    />
-    <img
-      class="footer-img"
-      src="../../assets/images/Sponsors/Asociatia-pentru-Inovatie-logo-1.png"
-      alt="Asociția pentru Inovație"
-    />
+    <img class="footer-img" src="../../assets/images/Sponsors/logo-csc.png" alt="Centrul pentru Studii Complexe" />
+    <img class="footer-img" src="../../assets/images/Sponsors/Sigla-INCS.gif"
+      alt="Institutul Național de Cercetare Pentru Sport - România" />
+    <img class="footer-img" src="../../assets/images/Sponsors/Asociatia-pentru-Inovatie-logo-1.png"
+      alt="Asociția pentru Inovație" />
   </ion-row>
   <div class="material-card">
     <ion-row justify-content-center>
-      <ion-button
-        class="footer-btn"
-        fill="clear"
-        expand="full"
-        (click)="navPrivacyPolicy()"
-      >
+      <ion-button class="footer-btn" fill="clear" expand="full" (click)="navPrivacyPolicy()">
         {{ 'privacyPolicy' | translate }}
       </ion-button>
-      <ion-button
-        class="footer-btn"
-        fill="clear"
-        expand="full"
-        (click)="navContact()"
-      >
+      <ion-button class="footer-btn" fill="clear" expand="full" (click)="navTerms()">
+        Termeni și Condiții
+      </ion-button>
+      <ion-button class="footer-btn" fill="clear" expand="full" (click)="navContact()">
         Contact
       </ion-button>
-      <ion-button
-        href="https://www.facebook.com/Atlantykron"
-        class="footer-btn"
-        fill="clear"
-        expand="full"
-      >
+      <ion-button href="https://www.facebook.com/Atlantykron" class="footer-btn" fill="clear" expand="full">
         <ion-icon name="logo-facebook"></ion-icon>
       </ion-button>
-      <ion-button
-        href="https://www.instagram.com/atlantykron/"
-        class="footer-btn"
-        fill="clear"
-        expand="full"
-      >
+      <ion-button href="https://www.instagram.com/atlantykron/" class="footer-btn" fill="clear" expand="full">
         <ion-icon name="logo-instagram"></ion-icon>
       </ion-button>
     </ion-row>
