--- a/src/app/guests-showcase/guests-showcase.component.html
+++ b/src/app/guests-showcase/guests-showcase.component.html
@@ -37,7 +37,7 @@
         </app-fancy-card>
         <app-fancy-card
           [image]="'../../assets/images/Guests/Heather-e1561802488420.jpg'"
-          [name]="'Heather Caton'"
+          [name]="'Heather Anderson'"
           title="{{ 'worldGenesisFoundationFounder' | translate }}"
         >
         </app-fancy-card>
@@ -101,7 +101,7 @@
       </app-fancy-card>
       <app-fancy-card
         [image]="'../../assets/images/Guests/Heather-e1561802488420.jpg'"
-        [name]="'Heather Caton'"
+        [name]="'Heather Anderson'"
         title="{{ 'worldGenesisFoundationFounder' | translate }}"
       >
       </app-fancy-card>
