--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -13,10 +13,11 @@
         rgba(68, 68, 68, 0.1), 
         rgba(17, 17, 17, 0.7)
     ),
-    url('../../assets/images/17017233_10210709430104890_7762668526959517728_o.jpg');
+    url('../../assets/images/hero.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     height: 100%;
+    background-position-y: bottom;
     width: 100%;
 }
 
