--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -15,7 +15,7 @@
         {{ 'privacyPolicy' | translate }}
       </ion-button>
       <ion-button class="footer-btn" fill="clear" expand="full" (click)="navTerms()">
-        Termeni și Condiții
+        {{ 'termsAndConditions' | translate }}
       </ion-button>
       <ion-button class="footer-btn" fill="clear" expand="full" (click)="navContact()">
         Contact
