--- a/src/app/courses/courses.page.html
+++ b/src/app/courses/courses.page.html
@@ -5,12 +5,8 @@
     <ion-row class="main-col">
       <ion-col size="2" *ngIf="!mobile && !tablet">
         <div class="year-selection-div">
-          <p
-            *ngFor="let year of [defaultYear, defaultYear-1, defaultYear-2, defaultYear-3, defaultYear-4]"
-            class="year-selection"
-            (click)="changeActiveYear(year)"
-            [ngClass]="{active: activeYear==year}"
-          >
+          <p *ngFor="let year of [defaultYear, defaultYear-1, defaultYear-2]" class="year-selection"
+            (click)="changeActiveYear(year)" [ngClass]="{active: activeYear==year}">
             {{ 'courses' | translate }} {{year}}
           </p>
         </div>
@@ -19,15 +15,9 @@
         <ion-row *ngIf="mobile || tablet">
           <ion-item class="select-year central-cards">
             <ion-label>{{ 'selectYear' | translate }}</ion-label>
-            <ion-select
-              interface="popover"
-              (ionChange)="changeActiveYear($event.target.value)"
-            >
-              <ion-select-option
-                *ngFor="let year of [defaultYear, defaultYear-1, defaultYear-2, defaultYear-3, defaultYear-4]"
-                value="{{year}}"
-                >{{year}}</ion-select-option
-              >
+            <ion-select interface="popover" (ionChange)="changeActiveYear($event.target.value)">
+              <ion-select-option *ngFor="let year of [defaultYear, defaultYear-1, defaultYear-2]"
+                value="{{year}}">{{year}}</ion-select-option>
             </ion-select>
           </ion-item>
         </ion-row>
@@ -36,73 +26,41 @@
           <ion-spinner name="circular"></ion-spinner>
         </div>
 
-        <h2
-          *ngIf="!isLoading"
-          class="section"
-          [ngClass]='{"section-center": mobile || tablet}'
-        >
+        <h2 *ngIf="!isLoading" class="section" [ngClass]='{"section-center": mobile || tablet}'>
           {{ 'science' | translate }}
         </h2>
         <ion-row class="card-grid">
-          <app-fancy-card
-            *ngFor="let course of filter(courses, 'Știință')"
-            class="central-cards"
-            [image]="course.pictureLink"
-            [title]="course.instructors"
+          <app-fancy-card *ngFor="let course of filter(courses, 'Știință')" class="central-cards"
+            [image]="course.pictureLink" [title]="course.instructors"
             [name]="language == 'ro' ? course.roTitle : course.enTitle"
-            (click)="navToSingleEntry(course)"
-          ></app-fancy-card>
+            (click)="navToSingleEntry(course)"></app-fancy-card>
         </ion-row>
 
-        <h2
-          *ngIf="!isLoading"
-          class="section"
-          [ngClass]='{"section-center": mobile || tablet}'
-        >
+        <h2 *ngIf="!isLoading" class="section" [ngClass]='{"section-center": mobile || tablet}'>
           {{ 'art' | translate }}
         </h2>
         <ion-row class="card-grid">
-          <app-fancy-card
-            *ngFor="let course of filter(courses, 'Artă')"
-            class="central-cards"
-            [image]="course.pictureLink"
-            [title]="course.instructors"
-            [name]="language == 'ro' ? course.roTitle : course.enTitle"
-          ></app-fancy-card>
+          <app-fancy-card *ngFor="let course of filter(courses, 'Artă')" class="central-cards"
+            [image]="course.pictureLink" [title]="course.instructors"
+            [name]="language == 'ro' ? course.roTitle : course.enTitle"></app-fancy-card>
         </ion-row>
 
-        <h2
-          *ngIf="!isLoading"
-          class="section"
-          [ngClass]='{"section-center": mobile || tablet}'
-        >
+        <h2 *ngIf="!isLoading" class="section" [ngClass]='{"section-center": mobile || tablet}'>
           {{ 'culture' | translate }}
         </h2>
         <ion-row class="card-grid">
-          <app-fancy-card
-            *ngFor="let course of filter(courses, 'Cultură')"
-            class="central-cards"
-            [image]="course.pictureLink"
-            [title]="course.instructors"
-            [name]="language == 'ro' ? course.roTitle : course.enTitle"
-          ></app-fancy-card>
+          <app-fancy-card *ngFor="let course of filter(courses, 'Cultură')" class="central-cards"
+            [image]="course.pictureLink" [title]="course.instructors"
+            [name]="language == 'ro' ? course.roTitle : course.enTitle"></app-fancy-card>
         </ion-row>
 
-        <h2
-          *ngIf="!isLoading"
-          class="section"
-          [ngClass]='{"section-center": mobile || tablet}'
-        >
+        <h2 *ngIf="!isLoading" class="section" [ngClass]='{"section-center": mobile || tablet}'>
           {{ 'sport' | translate }}
         </h2>
         <ion-row class="card-grid">
-          <app-fancy-card
-            *ngFor="let course of filter(courses, 'Sport')"
-            class="central-cards"
-            [image]="course.pictureLink"
-            [title]="course.instructors"
-            [name]="language == 'ro' ? course.roTitle : course.enTitle"
-          ></app-fancy-card>
+          <app-fancy-card *ngFor="let course of filter(courses, 'Sport')" class="central-cards"
+            [image]="course.pictureLink" [title]="course.instructors"
+            [name]="language == 'ro' ? course.roTitle : course.enTitle"></app-fancy-card>
         </ion-row>
       </ion-col>
     </ion-row>
