--- a/src/app/guests/guests.page.html
+++ b/src/app/guests/guests.page.html
@@ -5,12 +5,8 @@
     <ion-row class="main-col">
       <ion-col size="2" *ngIf="!mobile && !tablet">
         <div class="year-selection-div">
-          <p
-            *ngFor="let year of [defaultYear, defaultYear-1, defaultYear-2, defaultYear-3, defaultYear-4]"
-            class="year-selection"
-            (click)="changeActiveYear(year)"
-            [ngClass]="{active: activeYear==year}"
-          >
+          <p *ngFor="let year of [defaultYear, defaultYear-1, defaultYear-2]" class="year-selection"
+            (click)="changeActiveYear(year)" [ngClass]="{active: activeYear==year}">
             {{ 'guests' | translate }} {{year}}
           </p>
         </div>
@@ -19,15 +15,9 @@
         <ion-row *ngIf="mobile || tablet">
           <ion-item class="select-year central-cards">
             <ion-label>{{ 'selectYear' | translate }}</ion-label>
-            <ion-select
-              interface="popover"
-              (ionChange)="changeActiveYear($event.target.value)"
-            >
-              <ion-select-option
-                *ngFor="let year of [defaultYear, defaultYear-1, defaultYear-2, defaultYear-3, defaultYear-4]"
-                value="{{year}}"
-                >{{year}}</ion-select-option
-              >
+            <ion-select interface="popover" (ionChange)="changeActiveYear($event.target.value)">
+              <ion-select-option *ngFor="let year of [defaultYear, defaultYear-1, defaultYear-2]"
+                value="{{year}}">{{year}}</ion-select-option>
             </ion-select>
           </ion-item>
         </ion-row>
@@ -36,22 +26,13 @@
           <ion-spinner name="circular"></ion-spinner>
         </div>
 
-        <h2
-          *ngIf="!isLoading"
-          class="section"
-          [ngClass]='{"section-center": mobile || tablet}'
-        >
+        <h2 *ngIf="!isLoading" class="section" [ngClass]='{"section-center": mobile || tablet}'>
           {{ 'guests' | translate }}
         </h2>
         <ion-row class="card-grid">
-          <app-fancy-card
-            *ngFor="let guest of filter(guests)"
-            class="central-cards"
-            [image]="guest.pictureLink"
-            [title]="language == 'ro' ? guest.roTitle : guest.enTitle"
-            [name]="guest.name"
-            (click)="navToSingleEntry(guest)"
-          ></app-fancy-card>
+          <app-fancy-card *ngFor="let guest of filter(guests)" class="central-cards" [image]="guest.pictureLink"
+            [title]="language == 'ro' ? guest.roTitle : guest.enTitle" [name]="guest.name"
+            (click)="navToSingleEntry(guest)"></app-fancy-card>
         </ion-row>
       </ion-col>
     </ion-row>
