--- a/src/app/sponsors/sponsors.page.html
+++ b/src/app/sponsors/sponsors.page.html
@@ -5,12 +5,8 @@
     <ion-row class="main-col">
       <ion-col size="2" *ngIf="!mobile && !tablet">
         <div class="year-selection-div">
-          <p
-            *ngFor="let year of [defaultYear, defaultYear-1, defaultYear-2, defaultYear-3, defaultYear-4]"
-            class="year-selection"
-            (click)="changeActiveYear(year)"
-            [ngClass]="{active: activeYear==year}"
-          >
+          <p *ngFor="let year of [defaultYear, defaultYear-1, defaultYear-2]" class="year-selection"
+            (click)="changeActiveYear(year)" [ngClass]="{active: activeYear==year}">
             {{ 'sponsors' | translate }} {{year}}
           </p>
         </div>
@@ -19,15 +15,9 @@
         <ion-row *ngIf="mobile || tablet">
           <ion-item class="select-year central-cards">
             <ion-label>Selectati anul</ion-label>
-            <ion-select
-              interface="popover"
-              (ionChange)="changeActiveYear($event.target.value)"
-            >
-              <ion-select-option
-                *ngFor="let year of [defaultYear, defaultYear-1, defaultYear-2, defaultYear-3, defaultYear-4]"
-                value="{{year}}"
-                >{{year}}</ion-select-option
-              >
+            <ion-select interface="popover" (ionChange)="changeActiveYear($event.target.value)">
+              <ion-select-option *ngFor="let year of [defaultYear, defaultYear-1, defaultYear-2]"
+                value="{{year}}">{{year}}</ion-select-option>
             </ion-select>
           </ion-item>
         </ion-row>
@@ -36,86 +26,49 @@
           <ion-spinner name="circular"></ion-spinner>
         </div>
 
-        <h2
-          *ngIf="!isLoading"
-          class="section"
-          [ngClass]='{"section-center": mobile || tablet}'
-        >
+        <h2 *ngIf="!isLoading" class="section" [ngClass]='{"section-center": mobile || tablet}'>
           {{ 'organizingNGOs' | translate }}
         </h2>
         <ion-row class="card-grid">
-          <app-fancy-card
-            *ngFor="let partner of filter(partners, 'ONG-uri Organizatoare')"
-            class="central-cards"
-            [image]="partner.pictureLink"
-            [name]="language == 'ro' ? partner.roTitle : partner.enTitle"
-            (click)="navToSingleEntry(partner)"
-          ></app-fancy-card>
+          <app-fancy-card *ngFor="let partner of filter(partners, 'ONG-uri Organizatoare')" class="central-cards"
+            [image]="partner.pictureLink" [name]="language == 'ro' ? partner.roTitle : partner.enTitle"
+            (click)="navToSingleEntry(partner)"></app-fancy-card>
         </ion-row>
 
-        <h2
-          *ngIf="!isLoading"
-          class="section"
-          [ngClass]='{"section-center": mobile || tablet}'
-        >
+        <h2 *ngIf="!isLoading" class="section" [ngClass]='{"section-center": mobile || tablet}'>
           {{ 'governmentAgencies' | translate }}
         </h2>
         <ion-row class="card-grid">
-          <app-fancy-card
-            *ngFor="let partner of filter(partners, 'Agenții Guvernamentale')"
-            class="central-cards"
-            [image]="partner.pictureLink"
-            [name]="language == 'ro' ? partner.roTitle : partner.enTitle"
-            (click)="navToSingleEntry(partner)"
-          ></app-fancy-card>
+          <app-fancy-card *ngFor="let partner of filter(partners, 'Agenții Guvernamentale')" class="central-cards"
+            [image]="partner.pictureLink" [name]="language == 'ro' ? partner.roTitle : partner.enTitle"
+            (click)="navToSingleEntry(partner)"></app-fancy-card>
         </ion-row>
 
-        <h2
-          *ngIf="!isLoading"
-          class="section"
-          [ngClass]='{"section-center": mobile || tablet}'
-        >
+        <h2 *ngIf="!isLoading" class="section" [ngClass]='{"section-center": mobile || tablet}'>
           {{ 'officialPartners' | translate }}
         </h2>
         <ion-row class="card-grid">
-          <app-fancy-card
-            *ngFor="let partner of filter(partners, 'Parteneri Oficiali')"
-            class="central-cards"
-            [image]="partner.pictureLink"
-            [name]="language == 'ro' ? partner.roTitle : partner.enTitle"
-          ></app-fancy-card>
+          <app-fancy-card *ngFor="let partner of filter(partners, 'Parteneri Oficiali')" class="central-cards"
+            [image]="partner.pictureLink" [name]="language == 'ro' ? partner.roTitle : partner.enTitle"
+            (click)="navToSingleEntry(partner)"></app-fancy-card>
         </ion-row>
 
-        <h2
-          *ngIf="!isLoading"
-          class="section"
-          [ngClass]='{"section-center": mobile || tablet}'
-        >
+        <h2 *ngIf="!isLoading" class="section" [ngClass]='{"section-center": mobile || tablet}'>
           {{ 'sponsors' | translate }}
         </h2>
         <ion-row class="card-grid">
-          <app-fancy-card
-            *ngFor="let partner of filter(partners, 'Susținători')"
-            class="central-cards"
-            [image]="partner.pictureLink"
-            [name]="language == 'ro' ? partner.roTitle : partner.enTitle"
-          ></app-fancy-card>
+          <app-fancy-card *ngFor="let partner of filter(partners, 'Susținători')" class="central-cards"
+            [image]="partner.pictureLink" [name]="language == 'ro' ? partner.roTitle : partner.enTitle"
+            (click)="navToSingleEntry(partner)"></app-fancy-card>
         </ion-row>
 
-        <h2
-          *ngIf="!isLoading"
-          class="section"
-          [ngClass]='{"section-center": mobile || tablet}'
-        >
+        <h2 *ngIf="!isLoading" class="section" [ngClass]='{"section-center": mobile || tablet}'>
           {{ 'mediaPartners' | translate }}
         </h2>
         <ion-row class="card-grid">
-          <app-fancy-card
-            *ngFor="let partner of filter(partners, 'Parteneri Media')"
-            class="central-cards"
-            [image]="partner.pictureLink"
-            [name]="language == 'ro' ? partner.roTitle : partner.enTitle"
-          ></app-fancy-card>
+          <app-fancy-card *ngFor="let partner of filter(partners, 'Parteneri Media')" class="central-cards"
+            [image]="partner.pictureLink" [name]="language == 'ro' ? partner.roTitle : partner.enTitle"
+            (click)="navToSingleEntry(partner)"></app-fancy-card>
         </ion-row>
       </ion-col>
     </ion-row>
