readme, changed email

--- a/src/app/terms/terms.page.html
+++ b/src/app/terms/terms.page.html
@@ -367,7 +367,7 @@
         <h2>Contact Information</h2>
 
         <p>Address: Atlantykron</p>
-        <p>Email: atlantykron@gmail.com</p>
+        <p>Email: contact@atlantykron.org</p>
       </ion-col>
     </ion-row>
   </ion-grid>
