--- a/src/app/participate/segment-guide/segment-guide.component.html
+++ b/src/app/participate/segment-guide/segment-guide.component.html
@@ -1,50 +1,30 @@
 <div class="participate-content">
   <ion-row>
     <ion-col *ngIf="!menuBreakpoint" size-sm="4">
-      <img
-        class="segment-image"
-        src="../../../assets/images/Guide/guide-1.jpeg"
-        alt="Cristian Panfilov"
-      />
+      <img class="segment-image" src="../../../assets/images/Guide/guide-1.jpeg" alt="Cristian Panfilov" />
       <p class="image-caption"><b>Cristian Panfilov</b></p>
-      <p class="image-caption">>{{ 'logisticsDirector' | translate }}</p>
+      <p class="image-caption">{{ 'logisticsDirector' | translate }}</p>
       <p class="image-caption push-bottom">
         {{ 'logisticsDirectorDescription' | translate }}
       </p>
 
-      <img
-        class="segment-image"
-        src="../../../assets/images/Guide/guide-2.jpeg"
-        alt="Paza de Coasta"
-      />
+      <img class="segment-image" src="../../../assets/images/Guide/guide-2.jpeg" alt="Paza de Coasta" />
       <p class="image-caption">
         <b>{{ 'coastGuard' | translate }}</b>
       </p>
       <p class="image-caption push-bottom">{{ 'dockedNear' | translate }}</p>
 
-      <img
-        class="segment-image"
-        src="../../../assets/images/Guide/guide-3.jpeg"
-        alt="Gara de Nord"
-      />
+      <img class="segment-image" src="../../../assets/images/Guide/guide-3.jpeg" alt="Gara de Nord" />
       <p class="image-caption push-bottom">
         <b>{{ 'bucharestRailStation' | translate }}</b>
       </p>
 
-      <img
-        class="segment-image"
-        src="../../../assets/images/Guide/guide-4.jpeg"
-        alt="Barca de la Capidava"
-      />
+      <img class="segment-image" src="../../../assets/images/Guide/guide-4.jpeg" alt="Barca de la Capidava" />
       <p class="image-caption push-bottom">
         <b>{{ 'boat' | translate }}</b>
       </p>
 
-      <img
-        class="segment-image push-bottom"
-        src="../../../assets/images/Guide/guide-5.jpeg"
-        alt="Cantina Taberei"
-      />
+      <img class="segment-image push-bottom" src="../../../assets/images/Guide/guide-5.jpeg" alt="Cantina Taberei" />
       <p class="image-caption">
         <b>{{ 'canteen' | translate }}</b>
       </p>
@@ -56,8 +36,7 @@
       <p>{{ 'orgTeam2' | translate }}</p>
       <p>{{ 'orgTeam3' | translate }}</p>
       <p>
-        {{ 'orgTeam4' | translate }}<b>{{ 'orgTeam4Bold' | translate }}</b
-        >{{ 'orgTeam5' | translate }}
+        {{ 'orgTeam4' | translate }}<b>{{ 'orgTeam4Bold' | translate }}</b>{{ 'orgTeam5' | translate }}
       </p>
 
       <h1>{{ 'whoCan' | translate }}</h1>
