various translation fixes and bugfixes

--- a/src/app/guide/guide.component.html
+++ b/src/app/guide/guide.component.html
@@ -6,11 +6,13 @@
       <ion-col class="section-col">
         <h2 class="section-title">{{ 'typicalDay' | translate }}</h2>
         <p class="section-text">{{ 'typicalDayDescription' | translate }}</p>
-        <ion-button fill="outline" class="section-button" (click)="navigateToParticipate()">{{ 'findOutMore' | translate
+        <ion-button fill="outline" class="section-button" (click)="navigateToParticipateGuide()">{{ 'findOutMore' |
+          translate
           }}
         </ion-button>
         <p class="section-text">{{ 'participationGuide' | translate }}</p>
-        <ion-button fill="outline" class="section-button" (click)="navigateToParticipate()">{{ 'goToGuide' | translate
+        <ion-button fill="outline" class="section-button" (click)="navigateToParticipateRules()">{{ 'goToGuide' |
+          translate
           }}
         </ion-button>
       </ion-col>
