--- a/src/app/forgot/forgot.page.html
+++ b/src/app/forgot/forgot.page.html
@@ -9,29 +9,16 @@
           <ion-input [(ngModel)]="email" ngModel email required></ion-input>
           <ion-note slot="error"></ion-note>
         </ion-item>
-        <ion-button fill="outline" class="login-button" (click)="forgotEmail()"
-          >{{ 'send' | translate }}</ion-button
-        >
+        <ion-button fill="outline" class="login-button" (click)="forgotEmail()">{{ 'send' | translate }}</ion-button>
         <p *ngIf="displayError" class="error-msg">
-          {{ 'emailOrPasswordWrong' | translate }}
+          {{ 'forgotPasswordError' | translate }}
         </p>
         <p>{{ 'alreadyHaveAccount' | translate }}</p>
-        <ion-button fill="outline" class="login-button" (click)="navLogin()"
-          >{{ 'login' | translate }}</ion-button
-        >
+        <ion-button fill="outline" class="login-button" (click)="navLogin()">{{ 'login' | translate }}</ion-button>
       </ion-col>
       <ion-row *ngIf="!mobile">
-        <img
-          class="svg-login"
-          src="../../assets/illustrations/Group 2.svg"
-          alt="login illustration"
-        />
-        <img
-          class="svg-login"
-          id="login-blob"
-          src="../../assets/illustrations/blob-shape-login.svg"
-          alt="login blob"
-        />
+        <img class="svg-login" src="../../assets/illustrations/Group 2.svg" alt="login illustration" />
+        <img class="svg-login" id="login-blob" src="../../assets/illustrations/blob-shape-login.svg" alt="login blob" />
       </ion-row>
     </ion-row>
   </ion-grid>
