--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -6,64 +6,28 @@
       <ion-col (keydown.enter)="emailAndPasswordLoginHandler()" id="form-col">
         <ion-item class="form-item">
           <ion-label position="floating">*E-mail</ion-label>
-          <ion-input
-            type="email"
-            [(ngModel)]="email"
-            ngModel
-            email
-            required
-          ></ion-input>
+          <ion-input type="email" [(ngModel)]="email" ngModel email required></ion-input>
           <ion-note slot="error"></ion-note>
         </ion-item>
         <ion-item class="form-item">
-          <ion-label position="floating"
-            >{{ 'password' | translate }}</ion-label
-          >
-          <ion-input
-            type="password"
-            [(ngModel)]="password"
-            required
-          ></ion-input>
+          <ion-label position="floating">{{ 'password' | translate }}</ion-label>
+          <ion-input type="password" [(ngModel)]="password" required></ion-input>
         </ion-item>
-        <ion-button
-          fill="outline"
-          class="login-button"
-          (click)="emailAndPasswordLoginHandler()"
-          >{{ 'login' | translate }}</ion-button
-        >
+        <ion-button fill="outline" class="login-button" (click)="emailAndPasswordLoginHandler()">{{ 'login' | translate
+          }}</ion-button>
         <p *ngIf="displayError" class="error-msg">
-          {{ 'forgotPassword' | translate }}
+          {{ 'emailOrPasswordWrong' | translate }}
         </p>
-        <p>Sau</p>
+        <p>{{ 'or' | translate }}</p>
         <ion-row class="login-row-btn">
-          <ion-button
-            name="star"
-            fill="outline"
-            class="login-button"
-            (click)="googleLoginHandler()"
-          >
-            <span
-              ><img
-                class="comp-logo"
-                src="../../assets/images/google-logo.svg.png"
-                alt="google icon"
-            /></span>
+          <ion-button name="star" fill="outline" class="login-button" (click)="googleLoginHandler()">
+            <span><img class="comp-logo" src="../../assets/images/google-logo.svg.png" alt="google icon" /></span>
             {{ 'continueGoogle' | translate }}
           </ion-button>
         </ion-row>
         <ion-row class="login-row-btn">
-          <ion-button
-            name="star"
-            fill="outline"
-            class="login-button"
-            (click)="facebookLoginHandler()"
-          >
-            <span
-              ><img
-                class="comp-logo"
-                src="../../assets/images/fb-logo.svg.png"
-                alt="facebook icon"
-            /></span>
+          <ion-button name="star" fill="outline" class="login-button" (click)="facebookLoginHandler()">
+            <span><img class="comp-logo" src="../../assets/images/fb-logo.svg.png" alt="facebook icon" /></span>
             {{ 'continueFacebook' | translate }}
           </ion-button>
         </ion-row>
@@ -72,25 +36,12 @@
           <span id="click-here">{{ 'clickHere' | translate }}</span>
         </p>
         <p>{{ 'or' | translate }}</p>
-        <ion-button
-          fill="outline"
-          class="login-button"
-          (click)="navRegistration()"
-          >{{ 'register' | translate }}</ion-button
-        >
+        <ion-button fill="outline" class="login-button" (click)="navRegistration()">{{ 'register' | translate
+          }}</ion-button>
       </ion-col>
       <ion-row *ngIf="!mobile">
-        <img
-          class="svg-login"
-          src="../../assets/illustrations/Group 2.svg"
-          alt="login illustration"
-        />
-        <img
-          class="svg-login"
-          id="login-blob"
-          src="../../assets/illustrations/blob-shape-login.svg"
-          alt="login blob"
-        />
+        <img class="svg-login" src="../../assets/illustrations/Group 2.svg" alt="login illustration" />
+        <img class="svg-login" id="login-blob" src="../../assets/illustrations/blob-shape-login.svg" alt="login blob" />
       </ion-row>
     </ion-row>
   </ion-grid>
