--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -20,6 +20,12 @@
       <ion-button class="footer-btn" fill="clear" expand="full" (click)="navContact()">
         Contact
       </ion-button>
+      <ion-button href="https://atlantykron.org/2015/" class="footer-btn" fill="clear" expand="full">
+        {{ 'oldAtlantykron' | translate }}
+      </ion-button>
+      <ion-button href="http://atlantykron.org/site-vechi/index_old.htm" class="footer-btn" fill="clear" expand="full">
+        {{ 'archiveAtlantykron' | translate }}
+      </ion-button>
       <ion-button href="https://www.facebook.com/Atlantykron" class="footer-btn" fill="clear" expand="full">
         <ion-icon name="logo-facebook"></ion-icon>
       </ion-button>
