--- a/src/app/participate/participate.page.html
+++ b/src/app/participate/participate.page.html
@@ -7,24 +7,13 @@
         <ion-row *ngIf="menuBreakpoint">
           <ion-item class="select-step central-cards">
             <ion-label>{{ 'selectStep' | translate }}</ion-label>
-            <ion-select
-              interface="popover"
-              (ionChange)="segmentChanged($event.target.value)"
-              [(ngModel)]="step"
-            >
-              <ion-select-option
-                *ngFor="let stepOption of ['guide', 'rules', 'enrollForm']"
-                value="{{stepOption}}"
-                >{{stepDisplay[stepOption]}}</ion-select-option
-              >
+            <ion-select interface="popover" (ionChange)="segmentChanged($event.target.value)" [(ngModel)]="step">
+              <ion-select-option *ngFor="let stepOption of ['guide', 'rules', 'enrollForm']"
+                value="{{stepOption}}">{{stepDisplay[stepOption]}}</ion-select-option>
             </ion-select>
           </ion-item>
         </ion-row>
-        <ion-segment
-          (ionChange)="segmentChanged($event.detail.value)"
-          *ngIf="!menuBreakpoint"
-          [(ngModel)]="step"
-        >
+        <ion-segment (ionChange)="segmentChanged($event.detail.value)" *ngIf="!menuBreakpoint" [(ngModel)]="step">
           <ion-segment-button value="guide">
             <ion-label>{{stepDisplay.guide}}</ion-label>
           </ion-segment-button>
@@ -39,7 +28,7 @@
         <ion-col>
           <app-segment-guide *ngIf="step == 'guide'"></app-segment-guide>
           <app-segment-rules *ngIf="step == 'rules'"></app-segment-rules>
-          <app-segment-form *ngIf="step == 'enrollForm'"></app-segment-form>
+          <app-segment-form *ngIf="step == 'enrollForm'" [isLoggedIn]="isLoggedIn"></app-segment-form>
         </ion-col>
       </ion-col>
     </ion-row>
