1st round feedback

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,14 +1,11 @@
 <ion-grid>
-  <ion-col justify-content-center class="center-text-footer">
+  <!-- <ion-col justify-content-center class="center-text-footer">
     <h2 class="section-title">{{ 'organizedBy' | translate }}</h2>
   </ion-col>
   <ion-row justify-content-around>
-    <img class="footer-img" src="../../assets/images/Sponsors/logo-csc.png" alt="Centrul pentru Studii Complexe" />
-    <img class="footer-img" src="../../assets/images/Sponsors/Sigla-INCS.gif"
-      alt="Institutul Național de Cercetare Pentru Sport - România" />
-    <img class="footer-img" src="../../assets/images/Sponsors/Asociatia-pentru-Inovatie-logo-1.png"
-      alt="Asociția pentru Inovație" />
-  </ion-row>
+    <img class="footer-img" src="../../assets/images/ATL_512x512.webp" alt="Asociația Atlantykron" />
+
+  </ion-row> -->
   <div class="material-card">
     <ion-row justify-content-center>
       <ion-button class="footer-btn" fill="clear" expand="full" (click)="navPrivacyPolicy()">
