--- a/src/app/participate/segment-guide/segment-guide.component.html
+++ b/src/app/participate/segment-guide/segment-guide.component.html
@@ -19,11 +19,6 @@
         <b>{{ 'bucharestRailStation' | translate }}</b>
       </p>
 
-      <img class="segment-image" src="../../../assets/images/Guide/guide-4.jpeg" alt="Barca de la Capidava" />
-      <p class="image-caption push-bottom">
-        <b>{{ 'boat' | translate }}</b>
-      </p>
-
       <img class="segment-image push-bottom" src="../../../assets/images/Guide/guide-5.jpeg" alt="Cantina Taberei" />
       <p class="image-caption">
         <b>{{ 'canteen' | translate }}</b>
@@ -76,7 +71,7 @@
       <h1>{{ 'rustic' | translate }}</h1>
       <p>
         {{ 'rustic1' | translate
-        }}<span class="attention">info@worldgenesis.org</span>.
+        }}<span class="attention">office@atlantykron.org</span>.
       </p>
 
       <h1>{{ 'foodAndHygiene' | translate }}</h1>
