--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -13,11 +13,12 @@
 
 .footer-img {
     margin: 30px auto;
+    max-height: 200px;
 }
 
 .material-card {
     background-color: white;
-	border-radius: 10px;
+    border-radius: 10px;
     box-shadow: 380px;
     color: black;
     display: flex;
@@ -25,15 +26,15 @@
     justify-content: center;
     left: 0;
     margin: 30px;
-	margin-left: auto;
+    margin-left: auto;
     margin-right: auto;
     padding: 30px;
     text-decoration: none;
-	right: 0;
+    right: 0;
     width: 90%;
 }
 
-.section-title { 
+.section-title {
     font-size: 25px;
     margin-top: 60px;
     margin-bottom: 45px;
