--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
                     </ion-item>
                 </ion-menu-toggle>
                 <ion-item>
-                    <ion-select okText="OK" [cancelText]="language == 'ro' ? 'Închide' : 'Cancel'"
+                    <ion-select okText="OK" interface="popover" [cancelText]="language == 'ro' ? 'Închide' : 'Cancel'"
                         [(ngModel)]="language" [value]="language" (ionChange)="changeLanguage()">
                         <ion-select-option value="ro">🇷🇴 Română</ion-select-option>
                         <ion-select-option value="en">🇺🇸 English</ion-select-option>
