--- a/src/app/participate/participate.page.scss
+++ b/src/app/participate/participate.page.scss
@@ -18,6 +18,10 @@
     cursor: pointer;
 }
 
+.selector-central {
+    margin: 0 auto !important
+}
+
 ion-content {
     --ion-background-color: #eeeeee;
 }
