--- a/src/app/participate/segment-guide/segment-guide.component.html
+++ b/src/app/participate/segment-guide/segment-guide.component.html
@@ -43,6 +43,8 @@
       <h1>{{ 'security' | translate }}</h1>
       <p>{{ 'security1' | translate }}</p>
       <p>{{ 'security2' | translate }}</p>
+      <p>{{ 'security3' | translate }}</p>
+
 
       <h1>{{ 'transport' | translate }}</h1>
       <p>{{ 'transport1' | translate }}.</p>
