--- a/src/app/single-entry/single-entry.page.html
+++ b/src/app/single-entry/single-entry.page.html
@@ -50,7 +50,7 @@
           <span *ngIf="!data.isLive">{{ 'virtual' | translate }}</span>
         </h3>
 
-        <h3 class="space" *ngIf="type == 'conferences' || type == 'courses'">
+        <h3 class="space" *ngIf="type == 'conferences' || type == 'courses' && data.instructors.length > 0">
           {{ 'instructors' | translate }}: {{data.instructors}}
         </h3>
       </ion-col>
