--- a/src/app/sponsors/sponsors.page.html
+++ b/src/app/sponsors/sponsors.page.html
@@ -13,7 +13,7 @@
       </ion-col>
       <ion-col justify-content-start float-left>
         <ion-row *ngIf="mobile || tablet">
-          <ion-item class="select-year central-cards">
+          <ion-item class="select-year selector-central">
             <ion-label>Selectati anul</ion-label>
             <ion-select interface="popover" (ionChange)="changeActiveYear($event.target.value)">
               <ion-select-option *ngFor="let year of [defaultYear, defaultYear-1, defaultYear-2]"
