--- a/src/app/contact/contact.page.html
+++ b/src/app/contact/contact.page.html
@@ -4,7 +4,10 @@
   <ion-grid id="material-card">
     <ion-row>
       <ion-col id="form-col">
-        <ion-item class="form-item" (keyup.enter)="sendEmail()">
+        <h2 *ngIf="!isLoading" class="section" [ngClass]='{"section-center": mobile || tablet}'>
+          {{ 'contactInfo' | translate }}
+        </h2>
+        <!-- <ion-item class="form-item" (keyup.enter)="sendEmail()">
           <ion-label position="floating"
             >{{ 'yourEmail' | translate }}</ion-label
           >
@@ -38,15 +41,11 @@
         </p>
         <ion-button fill="outline" class="login-button" (click)="sendEmail()"
           >{{ 'send' | translate }}</ion-button
-        >
+        > -->
       </ion-col>
 
       <ion-row *ngIf="!mobile">
-        <img
-          class="svg-login"
-          src="../../assets/illustrations/Group 24.svg"
-          alt="contact illustration"
-        />
+        <img class="svg-login" src="../../assets/illustrations/Group 24.svg" alt="contact illustration" />
       </ion-row>
     </ion-row>
   </ion-grid>
