--- a/src/app/contact/contact.page.html
+++ b/src/app/contact/contact.page.html
@@ -4,7 +4,7 @@
   <ion-grid id="material-card">
     <ion-row>
       <ion-col id="form-col">
-        <h2 *ngIf="!isLoading" class="section" [ngClass]='{"section-center": mobile || tablet}'>
+        <h2 class="section" [ngClass]='{"section-center": mobile || tablet}'>
           {{ 'contactInfo' | translate }}
         </h2>
         <!-- <ion-item class="form-item" (keyup.enter)="sendEmail()">
